--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </ol>
                 <div class="carousel-inner rounded">
                     <div class="carousel-item active">
-                        <img class="d-block w-100 rounded" src="https://raw.githubusercontent.com/shone930331/MyNet/main/images/img01.JPG" alt="First">
+                        <img class="d-block w-100 rounded" src="images/img01.JPG" alt="First">
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100 rounded" src="images/img02.jpg" alt="Second">
