--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <img class="d-block w-100 rounded" src="images/img02.jpg" alt="Second">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100 rounded" src="images/img03.jpg" alt="Third">
+                        <img class="d-block w-100 rounded" src="images/img03.JPG" alt="Third">
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100 rounded" src="images/img04.jpg" alt="Third">
